--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "autoload": {
         "psr-4": {
             "Flexsy\\Player\\": "src",
-            "Flexsy\\Player\\Traits\\": "src/traits"
+            "Flexsy\\Player\\Traits\\": "src/Traits"
         }
     },
     "require": {}
