--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,7 @@
     "minimum-stability": "dev",
     "autoload": {
         "psr-4": {
-            "Flexsy\\Player\\": "src",
-            "Flexsy\\Player\\Traits\\": "src/Traits"
+            "Services\\Balance\\": "src"
         }
     },
     "require": {}
